# TRANQUIL-fw

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig
.github/workflows/: dev.yml  release.yml
components/RobotMotion/: CMakeLists.txt  Kconfig.projbuild  MotionQueue.cpp  MotionQueue.h  PolarHoming.cpp  PolarRobot.cpp  PolarRobot.h  README.md  RobotMotionAPI.cpp  RobotMotionAPI.h
components/kd_common/include/: kd_common.h
components/kd_common/src/: crypto.cpp  (+4 more)
components/kd_ntp/: CMakeLists.txt
components/kd_pixdriver/: CMakeLists.txt  README.md  idf_component.yml
components/sd/: CMakeLists.txt
components/stusb4500/: CMakeLists.txt  Kconfig.projbuild  README.md
components/tmcstepper/: CMakeLists.txt  README.md
components/tranquil-app/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/RobotMotion/: CMakeLists.txt  Kconfig.projbuild  PolarHoming.cpp  PolarRobot.cpp  PolarRobot.h  RobotCommon.cpp  RobotCommon.h  RobotMotionAPI.cpp  RobotMotionAPI.h
main/api/: api.cpp  api.h  api_player.cpp  api_player.h  api_playlist_player.cpp  api_playlist_player.h  cloud_api.cpp  cloud_api.h  cloud_download_pattern.cpp  cloud_download_pattern.h  cloud_login.cpp  cloud_login.h  led_api.cpp  patterns_api.cpp  patterns_api.h  playlists_api.cpp  playlists_api.h
main/sd/: ManifestExample.cpp  ManifestExample.h  ManifestManager.cpp  ManifestManager.h  README.md  sd.h
main/stusb4500/: CMakeLists.txt  Kconfig.projbuild  README.md  stusb4500.cpp  stusb4500.h
main/usb_pd/: usb_pd.cpp  usb_pd.h
variants/: tabletop  tranquil_v4
(+23 files in other folders)
